--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,7 +42,7 @@
                     android:contentDescription="@string/user_image"
                     android:elevation="3dp"
                     android:onClick="change_photo"
-                    android:src="@drawable/profile_photo"
+                    android:src="@drawable/no_image"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -79,27 +79,33 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
-                        <TextView
-                            android:id="@+id/rating"
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:id="@+id/rating_block"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Rating:"
-                            android:textSize="16sp"
-                            app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/username" />
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/username">
 
-                        <TextView
-                            android:id="@+id/tv_rating"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginStart="4dp"
-                            android:textSize="16sp"
-                            android:text="4.99"
-                            app:layout_constraintStart_toEndOf="@id/rating"
-                            app:layout_constraintTop_toBottomOf="@id/username"/>
+                            <TextView
+                                android:id="@+id/rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rating:"
+                                android:textSize="16sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"/>
+
+                            <TextView
+                                android:id="@+id/tv_rating"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="4dp"
+                                android:text=""
+                                android:textSize="16sp"
+                                app:layout_constraintStart_toEndOf="@id/rating"
+                                app:layout_constraintTop_toTopOf="parent" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
                         <TextView
@@ -116,7 +122,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/rating" />
+                            app:layout_constraintTop_toBottomOf="@id/rating_block" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -131,9 +137,9 @@
                 android:layout_marginTop="64dp"
                 android:layout_marginBottom="64dp"
                 android:elevation="1dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/top_block"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/top_block">
 
 
                 <androidx.recyclerview.widget.RecyclerView
