--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -99,9 +99,10 @@
         </TextView>
 
         <TextView
+            android:id="@+id/seller_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mercurial"
+            android:text=""
             android:layout_marginStart="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/seller"
