--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -53,7 +53,7 @@
                 android:layout_width="40dp"
                 android:layout_height="60dp"
                 android:layout_marginEnd="8dp"
-                android:src="@drawable/profile_modified"
+                android:src="@drawable/no_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image_flipper" />
 
