--- a/app/src/main/res/layout/list_reviews.xml
+++ b/app/src/main/res/layout/list_reviews.xml
@@ -22,7 +22,7 @@
             android:layout_height="60dp"
             android:contentDescription="@string/user_image"
             android:elevation="3dp"
-            android:src="@drawable/profile_photo"
+            android:src="@drawable/no_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,6 +36,16 @@
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/user_photo"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/created"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="datetime"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <RatingBar
             android:id="@+id/rating_bar"
