--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -45,6 +45,7 @@
                 android:layout_marginTop="19dp"
                 android:layout_marginEnd="4dp"
                 android:text="@string/name"
+                android:onClick="open_author_profile"
                 app:layout_constraintEnd_toStartOf="@+id/item_publisher_photo"
                 app:layout_constraintTop_toBottomOf="@id/image_flipper" />
 
